Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.8.0
-
Fix Version/s: 5.9.0 Beta 2
-
Component/s: GUI: Look'n'Feel, GUI: Painting
-
Labels:None
Description
I get the following Compiler Error:
\bq qgtk3dialoghelpers.cpp:249:57: error: cannot pass object of non-trivial type 'QByteArray' through variadic function; call will abort at runtime [-Wnon-pod-varargs]
Since commit 524f39db899d68e0ef90184a268eb75ad4ac216e a QByteArray is passed to the gtk function gtk_file_chooser_dialog_new.
Before an invalid char * was passed to the function instead.
If you are interested in, I can provide a pull request.